# xtext

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  kmpkg-configuration.json  setup.py
.github/workflows/: ci.yml  linux.yml  macos.yml  windows.yml
cmake/: xtext_cxx_config.cmake  xtext_deps.cmake
examples/: foo_ex.cc
tests/: CMakeLists.txt  ascii_test.cc  fnmatch_test.cc  foo_doctest.cc  foo_test.cc  match_test.cc  parser_test.cc  str_cat_test.cc  str_format_test.cc  str_split_test.cc  strip_test.cc  substitute_test.cc  trim_test.cc
tests/fast_float/: CMakeLists.txt  basictest.cc  basictest.cpp  example_comma_test.cc  example_comma_test.cpp  example_integer_times_pow10.cc  example_integer_times_pow10.cpp  example_test.cc  example_test.cpp  fast_int.cc  fast_int.cpp  random_string.cc  random_string.cpp  short_random_string.cc  short_random_string.cpp  string_test.cc  string_test.cpp  supported_chars_test.cc  supported_chars_test.cpp  wide_char_test.cc  wide_char_test.cpp
tests/simdutf/: CMakeLists.txt  base64_tests.cpp  bele_tests.cc  convert_latin1_to_utf8_tests.cc  convert_utf16be_to_utf8_tests.cpp  convert_utf16le_to_utf8_tests.cpp  convert_utf32_to_utf16be_tests.cpp  convert_utf32_to_utf16le_tests.cc  convert_utf32_to_utf8_tests.cc  convert_utf8_to_latin1_tests.cc  convert_utf8_to_utf16be_tests.cc  convert_utf8_to_utf16le_tests.cc  convert_utf8_to_utf32_tests.cc  count_utf16be.cc  count_utf16le.cc  count_utf8.cpp  detect_encodings_tests.cc  readme_tests.cc  simdutf_c_tests.cc  text_encoding_tests.cpp  validate_ascii_basic_tests.cc  validate_ascii_with_errors_tests.cpp  validate_utf16be_basic_tests.cc  validate_utf16le_basic_tests.cc  validate_utf32_basic_tests.cc  validate_utf8_basic_tests.cpp  validate_utf8_with_errors_tests.cpp
tests/simdutf/helpers/: CMakeLists.txt  compiletime_conversions.h  fixed_string.h  random_int.cc  random_int.h  random_utf16.cc  random_utf16.h  random_utf32.cc  random_utf32.h  random_utf8.cc  random_utf8.h  test.cc  test.h  transcode_test_base.cc  transcode_test_base.h  utf16.h
tests/simdutf/reference/: CMakeLists.txt  decode_utf16.h  decode_utf32.h  encode_latin1.h  encode_utf16.cc  encode_utf16.h  encode_utf32.h  encode_utf8.h  validate_utf16.cc  validate_utf16.h  validate_utf16_to_latin1.cc  validate_utf16_to_latin1.h  validate_utf32.cpp  validate_utf32.h  validate_utf32_to_latin1.cpp  validate_utf32_to_latin1.h  validate_utf8.cc  validate_utf8.h  validate_utf8_to_latin1.cc  validate_utf8_to_latin1.h
xtext/: CMakeLists.txt  ascii.cc  ascii.h  charset.h  escaping.cc  escaping.h  fnmatch.cc  fnmatch.h  foo.cc  macros.h  main.cc  match.cc  match.h  parser.h  predicate.h  simdutf.h  simdutf_c.h  skills.h  str_cat.cc  str_cat.h  str_format.h  str_replace.cc  str_replace.h  str_split.cc  str_split.h  strip.h  substitute.cc  substitute.h  trim.cc  trim.h
xtext/details/: memutil.cc  memutil.h  resize_uninitialized.h  str_split_internal.h  utf8.cc  utf8.h
xtext/fast_float/: fast_float.h  fast_table.h  parse_number.h
xtext/fmt/: README.md  args.h  base.h  chrono.h  color.h  compile.h  fmt.cc  format-inl.h  format.cc  format.h  os.cc  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
xtext/simdutf/: arm64.h  avx512.h  base64_implementation.h  base64_tables.h  common_defs.h  compiler_check.h  constexpr_ptr.h  encoding_types.cc  encoding_types.h  error.cc  error.h  fallback.h  haswell.h  icelake.h  implementation.cc  implementation.h  lasx.h  lsx.h  portability.h  ppc64.h  rvv.h  simdutf.cc  simdutf_c.cc  simdutf_version.h  westmere.h
xtext/simdutf/arm64/: arm_base64.cc  arm_convert_latin1_to_utf8.cc  arm_convert_utf16_to_utf8.cc  arm_convert_utf32_to_utf16.cc  arm_convert_utf32_to_utf8.cc  arm_convert_utf8_to_latin1.cc  arm_convert_utf8_to_utf16.cc  arm_convert_utf8_to_utf32.cc  arm_find.cc  arm_utf16fix.cc  implementation.cc
xtext/simdutf/fallback/: implementation.cc
xtext/simdutf/generic/: ascii_validation.h  base64.h  base64lengths.h  buf_block_reader.h  find.h  utf16.h  utf32.h  utf8.h  validate_utf16.h  validate_utf32.h
xtext/simdutf/haswell/: avx2_base64.cc  avx2_convert_latin1_to_utf8.cc  avx2_convert_utf16_to_utf8.cc  avx2_convert_utf32_to_utf16.cc  avx2_convert_utf32_to_utf8.cc  avx2_convert_utf8_to_utf16.cc  avx2_utf16fix.cc  implementation.cc
xtext/simdutf/icelake/: icelake_base64.inl.cc  icelake_common.inl.cc  icelake_convert_utf32_to_utf16.inl.cc  icelake_convert_utf32_to_utf8.inl.cc  icelake_convert_utf8_to_latin1.inl.cc  icelake_convert_utf8_to_utf16.inl.cc  icelake_convert_valid_utf8_to_latin1.inl.cc  icelake_find.inl.cc  icelake_from_utf8.inl.cc  icelake_from_valid_utf8.inl.cc  icelake_macros.inl.cc  icelake_utf16fix.cc  icelake_utf32_validation.inl.cc  icelake_utf8_common.inl.cc  icelake_utf8_length_from_utf16.inl.cc  icelake_utf8_validation.inl.cc  implementation.cc
xtext/simdutf/internal/: isadetection.h
xtext/simdutf/lasx/: implementation.cc  lasx_base64.cc  lasx_convert_latin1_to_utf8.cc  lasx_convert_utf16_to_utf8.cc  lasx_convert_utf32_to_utf8.cc  lasx_convert_utf8_to_latin1.cc  lasx_convert_utf8_to_utf16.cc  lasx_convert_utf8_to_utf32.cc  lasx_find.cc
xtext/simdutf/lsx/: implementation.cc  lsx_base64.cc  lsx_convert_latin1_to_utf8.cc  lsx_convert_utf16_to_utf8.cc  lsx_convert_utf32_to_utf8.cc  lsx_convert_utf8_to_latin1.cc  lsx_convert_utf8_to_utf16.cc  lsx_convert_utf8_to_utf32.cc  lsx_find.cc
xtext/simdutf/ppc64/: implementation.cc  ppc64_base64.cc  ppc64_base64_internal_tests.cc  ppc64_convert_latin1_to_utf8.cc  ppc64_convert_utf16_to_latin1.cc  ppc64_convert_utf16_to_utf32.cc  ppc64_convert_utf16_to_utf8.cc  ppc64_convert_utf32_to_latin1.cc  ppc64_convert_utf32_to_utf16.cc  ppc64_convert_utf8_to_latin1.cc  ppc64_convert_utf8_to_utf16.cc  ppc64_convert_utf8_to_utf32.cc  ppc64_write_to_utf8.cc  templates.cc
xtext/simdutf/rvv/: implementation.cc  (+8 more)
(+126 files in other folders)
